Fix font sizes on mobile.

--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ h1 {
 	background-color: inherit;
 	margin: 0;
 	padding: 0.5em 0 0;
+	white-space: nowrap;
 }
 
 #tagline {
@@ -51,6 +52,7 @@ h1 {
 	color: white;
 	padding: 0.5em 0 0;
 	margin: 0;
+	white-space: nowrap;
 }
 
 #navbar {
@@ -291,27 +293,30 @@ table, th, td {
 }
 
 @media only screen and (max-device-width: 480px) {
+	html, body {
+		font-size: 1.0em;
+		line-height: 125%;
+	}
+
 	h1 {
-		font-family: serif;
-		font-size: 1.4em;
-		padding-top: 0.5em;
+		font-size: 1.6em;
+		padding-top: 0.25em;
 	}
 
 	h2 {
-		font-size: 1.3em;
+		font-size: 1.4em;
 	}
 
 	#tagline {
-		font-family: monospace;
 		font-size: 1.2em;
 	}
 
 	#navbar a {
-		font-size: 0.80em;
+		font-size: 1.0em;
 	}
 
 	.postdate {
-		font-size: 1.0em;
+		font-size: 1.1em;
 	}
 
 	#title {
